update marker and resolution of the map

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,14 +14,12 @@
 
   .marker {
     position: absolute;
-    width: 10px; /* Sesuaikan dengan ukuran yang Anda inginkan */
-    height: 10px; /* Sesuaikan dengan ukuran yang Anda inginkan */
-    background-color: blue; /* Sesuaikan dengan warna yang Anda inginkan */
-    border-radius: 50%; /* Membuat marker berbentuk lingkaran */
-    transform: translate(-50%, -50%); /* Pusatkan marker */
+    width: 25px; /* Sesuaikan dengan ukuran yang Anda inginkan */
+    height: 40px; /* Sesuaikan dengan ukuran yang Anda inginkan */
+    transform: translate(-50%, -100%); /* Pusatkan marker */
   }
   
-  img {
+  .img-class {
     border: 2px solid black; /* Ganti dengan warna dan ketebalan stroke yang Anda inginkan */
   }
 
